apply plugin: 'java'
apply plugin: 'scala'
sourceCompatibility = 1.5
version = '1.0'

repositories {
    mavenCentral()
}

dependencies {
    compile 'org.scala-lang:scala-library:2.11.1'
    compile 'org.scalaz:scalaz-core_2.11:7.1.0'
    compile 'org.scalaz:scalaz-effect_2.11:7.1.0'
    testCompile group: 'junit', name: 'junit', version: '4.11'
}

sourceSets{
    main{
        scala{
            srcDirs = ['src']
        }
    }
}
compileScala {
    scalaCompileOptions.fork = true
    scalaCompileOptions.forkOptions.jvmArgs = ['-XX:MaxPermSize=512m']
    scalaCompileOptions.additionalParameters = [
            "-feature",
            "-language:reflectiveCalls", // used for config structural typing
            "-language:postfixOps"
    ]
}
task main(dependsOn:classes,type:JavaExec){
    main = "Main"
    classpath = sourceSets.main.runtimeClasspath
    standardInput = System.in
    //workingDir = sourceSets.main.runtimeClasspath
    ignoreExitValue = true
}
task utilTest(dependsOn:classes,type:JavaExec){
    main = "Util"
    classpath = sourceSets.main.runtimeClasspath
    standardInput = System.in
    //workingDir = sourceSets.main.runtimeClasspath
    ignoreExitValue = true
}